--- a/DiageoMDMWeb/src/main/webapp/admin/usuario/crearUsuario.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/usuario/crearUsuario.xhtml
@@ -70,7 +70,7 @@
                                             <h:panelGrid columns="3" width="90%">
                                                 <h:outputLabel value="#{msg.out_distribuidor}"/>
                                                 <p:selectOneMenu id="somDistriFather" value="#{gestionarUsuarioCreacion.distributorSelected}" converter="distribuidorConverter">
-                                                    <f:selectItems value="#{gestionarUsuarioCreacion.listDistributor}" var="distri" itemLabel="#{distri.nombre}"/>
+                                                    <f:selectItems value="#{gestionarUsuarioCreacion.listDistributor}" var="distri" itemLabel="#{distri.name3party}"/>
                                                 </p:selectOneMenu>
                                                 <p:commandButton value="#{msg.btn_acept}" process="@this somDistriFather" actionListener="#{gestionarUsuarioCreacion.listenerFindDistributorSonByFather()}"
                                                                  update="formCrearUsuario:tableDistributorSon"/>                                                
@@ -80,7 +80,7 @@
                                                          paginatorAlwaysVisible="false" rows="10"  paginator="true"
                                                          paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}">
                                                 <p:column headerText="#{msg.out_distribuidor}">
-                                                    <h:outputLabel value="#{tableDistriSon.nombre}"/>
+                                                    <h:outputLabel value="#{tableDistriSon.name3party}"/>
                                                 </p:column>
                                                 <p:column>
                                                     <p:commandLink value="#{msg.btn_add}" actionListener="#{gestionarUsuarioCreacion.addDistributorToUser(tableDistriSon)}" 
@@ -90,12 +90,12 @@
                                             <p:separator/>
                                             <h:outputLabel value="#{msg.usu_add_to_user}"/>
                                             <br/><br/>
-                                            <p:dataTable id="tableAllDistributorToEdit" value="#{gestionarUsuarioCreacion.listDistributorAddToUser}"
+                                            <p:dataTable id="tableAllDistributorToEdit" value="#{gestionarUsuarioCreacion.listDistributorPermission}"
                                                          var="tableDistriToSon"
                                                          paginatorAlwaysVisible="false" rows="10"  paginator="true"
                                                          paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}">
                                                 <p:column headerText="#{msg.out_distribuidor}">
-                                                    <h:outputLabel value="#{tableDistriToSon.distribuidor.nombre}"/>
+                                                    <h:outputLabel value="#{tableDistriToSon.distributor.name3party}"/>
                                                 </p:column>
                                                 <p:column>
                                                     <p:commandLink value="#{msg.btn_detalle}" style="color: blue" process="@this" update=":formCreateUserModal"
@@ -117,95 +117,12 @@
                                              /> 
                             <br/><br/>   
                             <p:messages id="mCamPas" closable="true" showDetail="true" showSummary="false" globalOnly="true" 
-                                        style="width: 25%;left: 35%;-webkit-transform: translate(-35%);text-align: center;position: absolute;"/>
+                                        style="width: 85%;left: 35%;-webkit-transform: translate(-35%);text-align: center;position: absolute;"/>
                         </h:panelGroup>
                     </div>
                 </h:form>
             </ui:define> 
         </ui:composition>
-        <h:form id="formCreateUserModal">                
-            <p:dialog id="dChain" modal="true" width="50%" header="#{msg.usu_edit_detail}" widgetVar="wvChain" resizable="false">
-                <h:outputStylesheet library="css" name="template.css"/>
-                <h:panelGroup id="pgSegment">
-                    <h:panelGrid columns="3">
-                        <h:outputLabel value="#{msg.out_seg_functional}"/>
-                        <p:spacer width="20px"/>
-                        <p:commandButton value="#{msg.btn_add}" process="@all" update="pgSegment"
-                                         styleClass="button" style="width: 100%" actionListener="#{gestionarUsuarioCreacion.addPermissionDistributorList()}"/>
-                    </h:panelGrid>
-                    <br/><br/>
-                    <p:panelGrid columns="3" style="width: 90%">
-                        <h:outputLabel value="#{msg.can_canal}"/>
-                        <p:selectBooleanCheckbox value="#{gestionarUsuarioCreacion.channelCheck}"/>                                                  
-                        <p:selectOneMenu style="width: 80%" value="#{gestionarUsuarioCreacion.channelSelected}" converter="channelConverter">
-                            <f:selectItems value="#{gestionarUsuarioCreacion.listChannel}" var="cha" itemLabel="#{cha.nombre}"/>
-                            <p:ajax update="formCreateUserModal:pgSegment" process="@this" listener="#{gestionarUsuarioCreacion.listenerChannel()}"/>
-                        </p:selectOneMenu>
-                        <h:outputLabel value="#{msg.sub_subcanal}"/>
-                        <p:selectBooleanCheckbox id="sbchSubcha" value="#{gestionarUsuarioCreacion.subChannelCheck}"/>
-                        <p:selectOneMenu style="width: 80%" value="#{gestionarUsuarioCreacion.subChannelSelected}" converter="subChannelConverter">
-                            <f:selectItems value="#{gestionarUsuarioCreacion.listSubChannel}" var="subcha" itemLabel="#{subcha.nombre}"/>
-                            <p:ajax update="formCreateUserModal:pgSegment" process="@this" listener="#{gestionarUsuarioCreacion.listenerSubChannel()}"/>
-                        </p:selectOneMenu>
-                        <h:outputLabel value="#{msg.seg_segmento}"/>
-                        <p:selectBooleanCheckbox id="sbchSeg" value="#{gestionarUsuarioCreacion.segmentCheck}"/>
-                        <p:selectOneMenu style="width: 80%" converter="segmentoConverter" value="#{gestionarUsuarioCreacion.segmentSelected}">
-                            <f:selectItems value="#{gestionarUsuarioCreacion.listSegment}" var="seg" itemLabel="#{seg.nombre}"/>
-                            <p:ajax update="formCreateUserModal:pgSegment" process="@this" listener="#{gestionarUsuarioCreacion.listenerSegment()}"/>
-                        </p:selectOneMenu>
-                        <h:outputLabel value="#{msg.sub_seg_subsegmento}"/>
-                        <p:selectBooleanCheckbox id="sbchSubseg" value="#{gestionarUsuarioCreacion.subSegmentCheck}"/>
-                        <p:selectOneMenu style="width: 80%" value="#{gestionarUsuarioCreacion.subSegmentSelected}" converter="subSegmentoConverter">
-                            <f:selectItems value="#{gestionarUsuarioCreacion.listSubSegment}" var="subseg" itemLabel="#{subseg.nomnbre}"/>
-                            <p:ajax update="formCreateUserModal:pgSegment" process="@this" listener="#{gestionarUsuarioCreacion.listenerSubSegment()}"/>
-                        </p:selectOneMenu>
-                        <h:outputLabel value="#{msg.out_potencial}"/>
-                        <p:selectOneMenu id="somPotAuto" converter="potentialConverter" value="#{gestionarUsuarioCreacion.potentialAutomatic}" disabled="true">
-                            <f:selectItems value="#{gestionarUsuarioCreacion.listaPotentialAutomatic}" var="potauto" itemLabel="#{potauto.namePot}"/>
-                        </p:selectOneMenu>
-                    </p:panelGrid>
-                    <br/>
-                    <p:separator/>
-                    <br/>
-                    <h:outputLabel value="#{msg.out_seg_potential}"/>
-                    <br/><br/>
-                    <p:panelGrid columns="3" style="width: 90%">
-                        <h:outputLabel value="#{msg.out_potencial}"/>
-                        <p:selectBooleanCheckbox value="#{gestionarUsuarioCreacion.potentialCheck}"/>   
-                        <p:selectOneMenu style="width: 80%" value="#{gestionarUsuarioCreacion.potentialManual}" converter="potentialConverter">
-                            <f:selectItems value="#{gestionarUsuarioCreacion.listPotential}" var="potman" itemLabel="#{potman.namePot}"/>
-                        </p:selectOneMenu>
-                    </p:panelGrid>
-                    <br/>
-                    <h:panelGrid columns="4">
-                        <p:commandButton value="#{msg.btn_select_all}" process="@all" update="pgSegment" actionListener="#{gestionarUsuarioCreacion.selectAllChain()}" styleClass="button" style="width: 100%"/>
-                        <p:commandButton value="#{msg.btn_unselect_all}" process="@all" update="pgSegment" actionListener="#{gestionarUsuarioCreacion.unSelectAllChain()}" styleClass="button" style="width: 100%"/>
-                        <p:commandButton value="#{msg.btn_acept}" process="@all" update="@form" actionListener="#{gestionarUsuarioCreacion.aceptChangesChain()}" styleClass="button" style="width: 100%"/>                        
-                        <p:commandButton value="#{msg.btn_cancel}" process="@all" update="@form" actionListener="#{gestionarUsuarioCreacion.cancelChangesChain()}" styleClass="button" style="width: 100%"/>
-                    </h:panelGrid>
-                    <br/>
-                    <p:dataTable id="dtSegmentSelect" value="#{gestionarUsuarioCreacion.listSegmentByDistributor}" var="segmentDistributor"
-                                 paginatorAlwaysVisible="false" rows="2"  paginator="true"
-                                 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}">
-                        <p:column headerText="#{msg.can_canal}">                            
-                            <p:selectBooleanCheckbox value="#{segmentDistributor.channelCheck eq '1'}" disabled="true"/>
-                            <h:outputLabel value="#{gestionarUsuarioCreacion.channelName(segmentDistributor.channel)}"/>
-                        </p:column>
-                        <p:column headerText="#{msg.sub_subcanal}">
-                            <p:selectBooleanCheckbox value="#{segmentDistributor.subChannelCheck eq '1'}" disabled="true"/>
-                            <h:outputLabel value="#{gestionarUsuarioCreacion.subChannelName(segmentDistributor.subChannel)}"/>
-                        </p:column>
-                        <p:column headerText="#{msg.seg_segmento}">
-                            <p:selectBooleanCheckbox value="#{segmentDistributor.segmentoCheck eq '1'}" disabled="true"/>
-                            <h:outputLabel value="#{gestionarUsuarioCreacion.segmentName(segmentDistributor.segmento)}"/>
-                        </p:column>
-                        <p:column headerText="#{msg.sub_seg_subsegmento}">
-                            <p:selectBooleanCheckbox value="#{segmentDistributor.subSegmentCheck eq '1'}" disabled="true"/>
-                            <h:outputLabel value="#{gestionarUsuarioCreacion.subSegmentName(segmentDistributor.subSegmento)}"/>                            
-                        </p:column>
-                    </p:dataTable>
-                </h:panelGroup>
-            </p:dialog>
-        </h:form>
+        <ui:include src="popupCreateUser.xhtml"/>        
     </h:body>
 </html>
