--- a/DiageoMDMWeb/src/main/webapp/admin/canal/consultarCanal.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/canal/consultarCanal.xhtml
@@ -17,11 +17,11 @@
                                      rendered="#{consultarChannelBean.verDetalle}" paginator="true"
                                      style="width: 60%;left: 50%;-webkit-transform: translate(-50%);position: absolute;">
                             <p:column headerText="#{msg.can_nombre}">
-                                <h:outputLabel value="#{cha.nombre}"/>
+                                <h:outputLabel value="#{cha.nameChannel}"/>
                             </p:column>
                             <p:column headerText="#{msg.estado}" style="text-align: center">                                       
-                                <p:graphicImage value="/resources/images/iconos/equis.png" width="20px" rendered="#{cha.estado eq '0'}"/>
-                                <p:graphicImage value="/resources/images/iconos/chulo.png" width="20px" rendered="#{cha.estado eq '1'}"/>
+                                <p:graphicImage value="/resources/images/iconos/equis.png" width="20px" rendered="#{cha.stateChannel eq '0'}"/>
+                                <p:graphicImage value="/resources/images/iconos/chulo.png" width="20px" rendered="#{cha.stateChannel eq '1'}"/>
                             </p:column>
                             <p:column>
                                 <p:commandLink value="#{msg.btn_detalle}" actionListener="#{consultarChannelBean.detalleChannel(cha)}" 
