--- a/DiageoMDMWeb/src/main/webapp/admin/segmento/consultarSegmento.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/segmento/consultarSegmento.xhtml
@@ -18,17 +18,17 @@
                                      rendered="#{segementoConsultarBean.verDetalle}" paginator="true"
                                      style="width: 60%;left: 50%;-webkit-transform: translate(-50%);position: absolute;">
                             <p:column headerText="#{msg.seg_nombre}">
-                                <h:outputLabel value="#{seg.nombre}"/>
+                                <h:outputLabel value="#{seg.nameSegment}"/>
                             </p:column>
                             <p:column headerText="#{msg.can_canal}">
-                                <h:outputLabel value="#{seg.idsubchannel.channelIdchannel.nombre}"/>
+                                <h:outputLabel value="#{seg.subChannelId.channelId.nameChannel}"/>
                             </p:column>
                             <p:column headerText="#{msg.sub_subcanal}">
-                                <h:outputLabel value="#{seg.idsubchannel.nombre}"/>
+                                <h:outputLabel value="#{seg.subChannelId.nameSubChannel}"/>
                             </p:column>
                             <p:column headerText="#{msg.estado}" style="text-align: center">                                       
-                                <p:graphicImage value="/resources/images/iconos/equis.png" width="20px" rendered="#{seg.estado eq '0'}"/>
-                                <p:graphicImage value="/resources/images/iconos/chulo.png" width="20px" rendered="#{seg.estado eq '1'}"/>
+                                <p:graphicImage value="/resources/images/iconos/equis.png" width="20px" rendered="#{seg.stateSegment eq '0'}"/>
+                                <p:graphicImage value="/resources/images/iconos/chulo.png" width="20px" rendered="#{seg.stateSegment eq '1'}"/>
                             </p:column>
                             <p:column>
                                 <p:commandLink value="#{msg.btn_detalle}" actionListener="#{segementoConsultarBean.detalle(seg)}" 
@@ -44,12 +44,12 @@
                                     <p:inputText id="itNombre" value="#{segementoConsultarBean.nombre}" required="true" label="#{msg.seg_nombre}" style="width: 70%"/>
                                     <h:outputLabel value="#{msg.can_canal}" style="width: 30%"/>
                                     <p:selectOneMenu value="#{segementoConsultarBean.canal}" converter="channelConverter" required="true" label="#{msg.can_canal}">
-                                        <f:selectItems value="#{segementoConsultarBean.listaCanales}" var="cha" itemLabel="#{cha.nombre}"/>
+                                        <f:selectItems value="#{segementoConsultarBean.listaCanales}" var="cha" itemLabel="#{cha.nameChannel}"/>
                                         <p:ajax listener="#{segementoConsultarBean.listenerListaSubCanales()}" process="@this" update="somSubCanal"/>
                                     </p:selectOneMenu>
                                     <h:outputLabel value="#{msg.sub_subcanal}" style="width: 30%"/>
                                     <p:selectOneMenu id="somSubCanal" value="#{segementoConsultarBean.subCanal}" converter="subChannelConverter" required="true" label="#{msg.sub_subcanal}">
-                                        <f:selectItems value="#{segementoConsultarBean.listaSubCanales}" var="subcha" itemLabel="#{subcha.nombre}"/>
+                                        <f:selectItems value="#{segementoConsultarBean.listaSubCanales}" var="subcha" itemLabel="#{subcha.nameSubChannel}"/>
                                     </p:selectOneMenu>
                                     <h:outputLabel value="#{msg.estado}"/>
                                     <p:selectBooleanCheckbox label="#{msg.usu_activo}" value="#{segementoConsultarBean.estado}"/>
