--- a/DiageoMDMWeb/src/main/webapp/admin/subcanal/consultarSubCanal.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/subcanal/consultarSubCanal.xhtml
@@ -18,14 +18,14 @@
                                      rendered="#{consultarSubChannel.verDetalle}" paginator="true"
                                      style="width: 60%;left: 50%;-webkit-transform: translate(-50%);position: absolute;">
                             <p:column headerText="#{msg.sub_can_nombre}">
-                                <h:outputLabel value="#{subcha.nombre}"/>
+                                <h:outputLabel value="#{subcha.nameSubChannel}"/>
                             </p:column>
                             <p:column headerText="#{msg.can_nombre}">
-                                <h:outputLabel value="#{subcha.channelIdchannel.nombre}"/>
+                                <h:outputLabel value="#{subcha.channelId.nameChannel}"/>
                             </p:column>
                             <p:column headerText="#{msg.estado}" style="text-align: center">                                       
-                                <p:graphicImage value="/resources/images/iconos/equis.png" width="20px" rendered="#{subcha.estado eq '0'}"/>
-                                <p:graphicImage value="/resources/images/iconos/chulo.png" width="20px" rendered="#{subcha.estado eq '1'}"/>
+                                <p:graphicImage value="/resources/images/iconos/equis.png" width="20px" rendered="#{subcha.stateSubChannel eq '0'}"/>
+                                <p:graphicImage value="/resources/images/iconos/chulo.png" width="20px" rendered="#{subcha.stateSubChannel eq '1'}"/>
                             </p:column>
                             <p:column>
                                 <p:commandLink value="#{msg.btn_detalle}" actionListener="#{consultarSubChannel.detalleSubChannel(subcha)}" 
@@ -41,7 +41,7 @@
                                     <p:inputText id="itNombre" value="#{consultarSubChannel.nombreSubChannel}" required="true" label="#{msg.sub_can_nombre}" style="width: 70%"/>
                                     <h:outputLabel value="#{msg.can_canal}" style="width: 30%"/>
                                     <p:selectOneMenu value="#{consultarSubChannel.channel}" converter="channelConverter">                                        
-                                        <f:selectItems value="#{consultarSubChannel.listaChannel}" var="channel" itemLabel="#{channel.nombre}"/>
+                                        <f:selectItems value="#{consultarSubChannel.listaChannel}" var="channel" itemLabel="#{channel.nameChannel}"/>
                                     </p:selectOneMenu>
                                     <h:outputLabel value="#{msg.estado}"/>
                                     <p:selectBooleanCheckbox label="#{msg.usu_activo}" value="#{consultarSubChannel.estado}"/>
