--- a/DiageoMDMWeb/src/main/webapp/admin/subsegmento/consultarSubSegmento.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/subsegmento/consultarSubSegmento.xhtml
@@ -18,20 +18,20 @@
                                      rendered="#{subSegmentoConsultarBean.verDetalle}" paginator="true"
                                      style="width: 60%;left: 50%;-webkit-transform: translate(-50%);position: absolute;">
                             <p:column headerText="#{msg.sub_seg_nombre}">
-                                <h:outputLabel value="#{seg.nomnbre}"/>
+                                <h:outputLabel value="#{seg.nameSubsegment}"/>
                             </p:column>
                             <p:column headerText="#{msg.seg_segmento}">
-                                <h:outputLabel value="#{seg.idsegmento.nombre}"/>
+                                <h:outputLabel value="#{seg.segmentId.nameSegment}"/>
                             </p:column>
                             <p:column headerText="#{msg.can_canal}">
-                                <h:outputLabel value="#{seg.idsegmento.idsubchannel.channelIdchannel.nombre}"/>
+                                <h:outputLabel value="#{seg.segmentId.subChannelId.channelId.nameChannel}"/>
                             </p:column>
                             <p:column headerText="#{msg.sub_subcanal}">
-                                <h:outputLabel value="#{seg.idsegmento.idsubchannel.nombre}"/>
+                                <h:outputLabel value="#{seg.segmentId.subChannelId.nameSubChannel}"/>
                             </p:column>
                             <p:column headerText="#{msg.estado}" style="text-align: center">                                       
-                                <p:graphicImage value="/resources/images/iconos/equis.png" width="20px" rendered="#{seg.estado eq '0'}"/>
-                                <p:graphicImage value="/resources/images/iconos/chulo.png" width="20px" rendered="#{seg.estado eq '1'}"/>
+                                <p:graphicImage value="/resources/images/iconos/equis.png" width="20px" rendered="#{seg.stateSubSegment eq '0'}"/>
+                                <p:graphicImage value="/resources/images/iconos/chulo.png" width="20px" rendered="#{seg.stateSubSegment eq '1'}"/>
                             </p:column>
                             <p:column>
                                 <p:commandLink value="#{msg.btn_detalle}" actionListener="#{subSegmentoConsultarBean.detalle(seg)}" 
@@ -48,19 +48,19 @@
 
                                     <h:outputLabel value="#{msg.can_canal}" style="width: 30%"/>
                                     <p:selectOneMenu value="#{subSegmentoConsultarBean.canal}" converter="channelConverter" required="true" label="#{msg.can_canal}">
-                                        <f:selectItems value="#{subSegmentoConsultarBean.listaCanales}" var="cha" itemLabel="#{cha.nombre}"/>
+                                        <f:selectItems value="#{subSegmentoConsultarBean.listaCanales}" var="cha" itemLabel="#{cha.nameChannel}"/>
                                         <p:ajax listener="#{subSegmentoConsultarBean.listenerListaSubCanales()}" process="@this" update="somSubCanal"/>
                                     </p:selectOneMenu>
 
                                     <h:outputLabel value="#{msg.sub_subcanal}" style="width: 30%"/>
                                     <p:selectOneMenu id="somSubCanal" value="#{subSegmentoConsultarBean.subCanal}" converter="subChannelConverter" required="true" label="#{msg.sub_subcanal}">
-                                        <f:selectItems value="#{subSegmentoConsultarBean.listaSubCanales}" var="subcha" itemLabel="#{subcha.nombre}"/>
+                                        <f:selectItems value="#{subSegmentoConsultarBean.listaSubCanales}" var="subcha" itemLabel="#{subcha.nameSubChannel}"/>
                                         <p:ajax listener="#{subSegmentoConsultarBean.listenerSegmento()}" process="@this" update="somSegmento"/>
                                     </p:selectOneMenu>
 
                                     <h:outputLabel value="#{msg.seg_segmento}" style="width: 30%"/>
                                     <p:selectOneMenu id="somSegmento" value="#{subSegmentoConsultarBean.segmento}" converter="segmentoConverter" required="true" label="#{msg.seg_segmento}">
-                                        <f:selectItems value="#{subSegmentoConsultarBean.listaSegmento}" var="subseg" itemLabel="#{subseg.nombre}"/>
+                                        <f:selectItems value="#{subSegmentoConsultarBean.listaSegmento}" var="subseg" itemLabel="#{subseg.nameSegment}"/>
                                     </p:selectOneMenu>
 
                                     <h:outputLabel value="#{msg.estado}"/>
