--- a/DiageoMDMWeb/src/main/webapp/outlet/cargaMasivaOutlet.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/outlet/cargaMasivaOutlet.xhtml
@@ -1,14 +1,21 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui">
 
     <body>
 
         <ui:composition template="./../WEB-INF/templates/diageoWebTemplate.xhtml">
 
             <ui:define name="content">
-                content
+                <h:form>
+                    <div style="left: 50%;-webkit-transform: translate(-50%);position: absolute;width: 90%">
+                        <p:fileUpload mode="advanced" dragDropSupport="false"
+                                      sizeLimit="100000" fileLimit="3" allowTypes="/(\.|\/)(gif|jpe?g|png|csv|xls)$/"/>
+                    </div>
+                </h:form>
             </ui:define>
 
         </ui:composition>
