--- a/DiageoMDMWeb/src/main/webapp/reports/outletReport.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/reports/outletReport.xhtml
@@ -1,14 +1,56 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <body>
 
-        <ui:composition template="./../../WEB-INF/templates/diageoWebTemplate.xhtml">
+        <ui:composition template="/WEB-INF/templates/diageoWebTemplate.xhtml">
 
             <ui:define name="content">
-                content
+                <h:form id="formReportOutlet">
+                    <div style="left: 50%;-webkit-transform: translate(-50%);position: absolute;width: 90%">
+                        <h:panelGroup id="pgSegment" style="width: 100%">
+                            <h:panelGrid columns="2" style="width: 70%">
+                                <h:outputLabel value="#{msg.sub_seg_subsegmento}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
+                                <p:selectOneMenu id="somSubSegmento" style="width: 90%" value="#{reportOutletBean.subSegmentoSeleccionado}" 
+                                                 converter="subSegmentoConverter">
+                                    <f:selectItems value="#{outletConsultarBean.listSubSegment}" var="subseg" itemLabel="#{subseg.nameSubsegment}"/>
+                                    <p:ajax process="@this" update="@form" listener="#{reportOutletBean.filerListOutlet()}"/>
+                                </p:selectOneMenu>                                
+                            </h:panelGrid>                            
+                        </h:panelGroup>
+                        <br/>
+                        <h:commandLink>
+                            <p:graphicImage name="/images/iconos/pdf.png" width="5%"/>
+                            <p:dataExporter type="pdf" target="dtOutlet" fileName="Report" pageOnly="false" />
+                        </h:commandLink>
+
+                        <h:commandLink>
+                            <p:graphicImage name="/images/iconos/csv.png" width="5%"/>
+                            <p:dataExporter type="csv" target="dtOutlet" fileName="Report" pageOnly="false" />
+                        </h:commandLink>
+                        <p:dataTable id="dtOutlet" value="#{reportOutletBean.listaOutlets}" var="outdt" paginatorAlwaysVisible="false" rows="15"
+                                     paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                                     style="font-size:  90% !important" rendered="#{reportOutletBean.verDetalle}" paginator="true">                         
+                            <p:column headerText="#{msg.out_razon_social}">
+                                <h:outputLabel value="#{outdt.businessName}"/>
+                            </p:column>
+                            <p:column headerText="#{msg.out_kiernan}">
+                                <h:outputLabel value="#{outdt.kiernanId}"/>
+                            </p:column>
+                            <p:column headerText="#{msg.out_nit}">
+                                <h:outputLabel value="#{outdt.nit}"/>
+                            </p:column>
+                            <p:column headerText="#{msg.sub_seg_subsegmento}">
+                                <h:outputLabel value="#{outdt.subSegmentId.nameSubsegment}"/>
+                            </p:column>                                                        
+                        </p:dataTable>
+                    </div>
+                </h:form>
             </ui:define>
 
         </ui:composition>
